--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,9 @@ body {
 	padding: 10px 0px;
 	margin-left: 0px;
 }
+.imgStyle h3 {
+	padding: 0px 50px;
+}
 .imgStyle {
 	padding: 20px 40px 30px 40px;
 	border-bottom: #71bc9a;
@@ -68,10 +71,11 @@ body {
 	padding: 0;
 }
 .carousel-caption {
-	background-color: #f1f0ee;
-		margin: 0 -72px;
-	padding: 0px 0px 0px 0px;
-	width: 100%;
+	position: absolute;
+background-color: #f1f0ee;
+    margin: 11px -53px;
+    padding: 0px 0px 0px 0px;
+    width: 91.5%;
 
 }
 .rightStyle img  {
@@ -85,6 +89,12 @@ body {
 	padding-bottom: 20px;
 
 }
+.crop {
+    max-width: 3000px;
+}
+.imageAndText {position: relative;} 
+.imageAndText .col {position: absolute; z-index: 1; top: 0; left: 0;}
+
 /*.leftStyle {
     max-width: 400px;
     min-width: 112px;
